# data_warehouse

./: .gitignore  dbt_project.yml  productHierarchy_missings.csv  pyproject.toml  test_ZZ86170.csv
config/: sap_date.py  sap_sql_types.py  sap_utils.py  sql_server.py  temp_4e69fdb843fa4f508544cd0af635f122.csv
ingestion/sap/: product_hierarchy_mapping.csv  product_hierarchy_mapping.py
ingestion/sap/billing/: billing_full_load.py
ingestion/sap/inbounds/: inbouds_full_load.py
ingestion/sap/material/: material_stocks_full_load.py
ingestion/sap/product/: product_full_load.py  product_incr_load.py
ingestion/sap/purchase/: purchase_order_full_load.py
ingestion/sap/sales/: sales_full_load.py
models/marts/: MART_Availability.sql
models/sources/: sap.yml
pipelines/: autoexec.py  run_all.py  sap_flows.py  test_products.py
